# CS4471-SIMS-CLI-Client

./: .gitmodules  Cargo.toml  README.md  build.rs  install_requirements.py
.github/workflows/: rust.yml
diagrams/: sims-cli.puml
src/: assets.rs  frontend.rs  iced_messages.rs  main.rs  states.rs  styles.rs  ui_messages.rs  views.rs
