[package]
name = "cs4471-sims-cli-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = {version="0.5.2", features=["tokio", "image", "svg"]}
iced_aw = {git = "https://github.com/iced-rs/iced_aw", rev = "9dc1ff53e4be0934c61d0fc92a23f96252045393", default-features=false, features=["floating_element", "modal", "card",  "colors"]}
tonic = "0.8.2"
prost = "0.11.2"
async-std = "1.12.0"
env_logger = "0.9.3"
log = "0.4.17"
image = "0.24.5"
linked_hash_set = "0.1.4"
num-traits = "0.2.15"

[build-dependencies]
tonic-build = "0.8.2"